--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-```html
+<!-- frontend/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +10,12 @@
     header{background:#ff4da6;padding:18px;text-align:center;color:#fff}
     .container{display:flex;padding:12px;gap:12px}
     .sidebar{width:220px}
-    .products{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:12px;flex:1}
+    .products{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px;flex:1}
     .product-card{background:#fff;padding:12px;border-radius:8px;text-align:center;box-shadow:0 1px 6px rgba(0,0,0,.06)}
-    .product-card img{width:130px;height:130px;object-fit:contain}
+    .product-card img{width:140px;height:140px;object-fit:contain}
+    .discount-box{display:inline-block;background:#e8f7e8;color:#148214;padding:4px 6px;border-radius:6px;font-weight:600;margin-left:6px;font-size:13px}
+    .price-row { margin-top:8px }
+    .whatsapp { display:inline-block;margin-top:10px;padding:8px 10px;background:#25D366;color:white;border-radius:6px;text-decoration:none }
   </style>
 </head>
 <body>
@@ -34,61 +37,63 @@ const API = '/api';
 let allProducts = [];
 
 async function loadProducts(){
-  const res = await fetch(`${API}/products`);
-  allProducts = await res.json();
-  renderProducts(allProducts);
+  try {
+    const res = await fetch(`${API}/products`);
+    allProducts = await res.json();
+    renderProducts(allProducts);
+  } catch(e){ console.error(e) }
 }
 
 function renderProducts(list){
   const el = document.getElementById('productList');
   el.innerHTML = '';
-
   list.forEach(p=>{
-    const selling = (Number(p.mrp) || 0) - (Number(p.discount_1) || 0);
-
-    const div = document.createElement('div');
-    div.className = 'product-card';
-    
+    const div = document.createElement('div'); div.className='product-card';
+    const imgpath = p.image_url && p.image_url.length ? `/static/images/${p.image_url}` : '/static/images/Pic.jpg';
+    const mrp = Number(p.mrp||0);
+    const sp1 = Number(p.selling_price_1 ?? (mrp - (p.discount_1||0)));
+    const sp5 = Number(p.selling_price_5 ?? (mrp - (p.discount_5||0)));
+    const d1 = mrp>0 ? Math.round(((mrp - sp1)/mrp)*100*100)/100 : 0;
+    const d5 = mrp>0 ? Math.round(((mrp - sp5)/mrp)*100*100)/100 : 0;
     div.innerHTML = `
-      <img src="/images/${p.image_url || 'Pic.jpg'}" alt="${p.name}" />
-      <h4>${p.name}</h4>
-      <p>${p.category}</p>
-
-      <p>
-        <strike>₹${p.mrp}</strike>  
-        <b>₹${selling}</b>
-      </p>
-
-      <p style="color:#ff0080;font-size:14px">
-        Discount 1 pc: ₹${p.discount_1}<br>
-        Discount 5 pc: ₹${p.discount_5}
-      </p>
+      <img src="${imgpath}" alt="${p.name}" />
+      <h4>${p.name || ''}</h4>
+      <p style="min-height:36px">${p.details || ''}</p>
+      <div class="price-row"><strike>₹${mrp}</strike> <b>₹${sp1}</b> <span class="discount-box">${d1}%</span></div>
+      <div class="price-row"><small>Buy 5pcs each ₹${sp5}</small> <span class="discount-box">${d5}%</span></div>
+      <a class="whatsapp" href="${waLink('+919999999999', p)}" target="_blank" rel="noopener">Buy via WhatsApp</a>
     `;
-
     el.appendChild(div);
   });
 }
 
+function waLink(number, product){
+  // NOTE: replace number with your phone (no + if using wa.me direct), keep +countrycode optional
+  // Compose message; URL encode
+  const to = number.replace(/\+/g,'');
+  const text = `Hello%20I%20want%20to%20buy%20%3A%20${encodeURIComponent(product.name || '')}%0AProduct%20ID%3A%20${product.id}%0AQuantity%3A%20%5BEnter%20qty%5D%0APlease%20send%20to%20%3A%20%5BName%2C%20Address%2C%20Pincode%5D`;
+  // Use wa.me with country+number
+  return `https://wa.me/${to}?text=${text}`;
+}
+
 async function loadCategories(){
-  const res = await fetch(`${API}/categories`);
-  const cats = await res.json();
-
-  const list = document.getElementById('categoryList');
-  list.innerHTML = '<li style="background:#ff4da6;color:#fff;padding:8px;margin-bottom:8px;border-radius:6px;cursor:pointer" onclick="renderProducts(allProducts)">All Products</li>';
-
-  cats.forEach(c=>{
-    const li = document.createElement('li');
-    li.style = "background:#ff4da6;color:#fff;padding:8px;margin-bottom:8px;border-radius:6px;cursor:pointer";
-    li.textContent = c.name;
-
-    li.onclick = async ()=> {
-      const r = await fetch(`${API}/category/${encodeURIComponent(c.name)}`);
-      const products = await r.json();
-      renderProducts(products);
-    };
-
-    list.appendChild(li);
-  });
+  try {
+    const res = await fetch(`${API}/categories`);
+    const cats = await res.json();
+    const list = document.getElementById('categoryList');
+    list.innerHTML = '<li style="background:#ff4da6;color:#fff;padding:8px;margin-bottom:8px;border-radius:6px;cursor:pointer" onclick="renderProducts(allProducts)">All Products</li>';
+    cats.forEach(c=>{
+      const li = document.createElement('li');
+      li.style = "background:#ff4da6;color:#fff;padding:8px;margin-bottom:8px;border-radius:6px;cursor:pointer";
+      li.textContent = c.name;
+      li.onclick = async ()=> {
+        const r = await fetch(`${API}/category/${encodeURIComponent(c.name)}`);
+        const products = await r.json();
+        renderProducts(products);
+      };
+      list.appendChild(li);
+    });
+  } catch(e){ console.error(e) }
 }
 
 document.getElementById('searchInput').addEventListener('input', ()=>{
@@ -102,5 +107,4 @@ loadProducts();
 </script>
 </body>
 </html>
-```
 
